@@ -18,7 +18,7 @@
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
-* $Id: misc3d.c,v 1.93 2008/08/12 18:23:48 Superfly_Jon Exp $
+* $Id: misc3d.c,v 1.94 2008/10/08 10:24:13 c_anthon Exp $
 */
 
 #include "config.h"
@@ -2376,8 +2376,14 @@ void ClearTextures(BoardData3d* bd3d)
 	bd3d->numTextures = 0;
 }
 
+static void
+free_texture( gpointer data, gpointer userdata ) {
+	free(data);
+}
+
 void DeleteTextureList(void)
 {
+	g_list_foreach(textures, free_texture, NULL);
 	g_list_free(textures);
 }
 
